--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2273,6 +2273,10 @@ player_vars:
     initial_value: 0
     value_type: int
 
+  stronghold_progress:
+    initial_value: 0
+    value_type: int
+
 #SLIDES CONFIGURATION
 #--------------------------------------------
 slides:
@@ -2292,22 +2296,22 @@ modes:
   - base
   - lightoverlay
   - outlanegate
+  - divertercontrol
+  - extraball
+  - skillshot
+  - tools
+  - tooldisplay
+  - bonus
+  - bonusdisplay
+  - worldcontroller
   - world1
   - world2
   - world3
   - world4
   - world5
   - theend
-  - worldcontroller
-  - bonus
-  - bonusdisplay
-  - tools
-  - tooldisplay
   - villagermb
   - night
   - nightready
   - stronghold
-  - divertercontrol
-  - extraball
-  - skillshot
-  
+
