--- a/modes/base/config/base.yaml
+++ b/modes/base/config/base.yaml
@@ -99,12 +99,14 @@ event_player:
     world3_completed
   multiball_lock_nightlock_locked_ball{current_player.world_id==4}:
     world4_completed
-  multiball_strongholdmb_started{current_player.world_id==5}:
+  multiball_lock_strongholdlock_locked_ball{current_player.world_id==5}:
     world5_completed
+    #stronghold_start
 
   #=========== CONTROLS WHEN WORLDS ARE STARTED ============
   #START WORLD 1
   mode_base_started{current_player.world_id==0}:
+    #world1_start
     world5_start
 
   #ENABLE NEXT WORLDS WHEN NIGHT MODE RETURNS
@@ -112,9 +114,7 @@ event_player:
     outlanegate_open
 
   multiball_nightmb_ended{current_player.world_id==1}:
-    #theend_start
-    world5_start
-    #world2_start   
+    world2_start   
   multiball_nightmb_ended{current_player.world_id==2}:
     world3_start   
   multiball_nightmb_ended{current_player.world_id==3}:
@@ -500,6 +500,20 @@ achievements:
     events_when_completed: rotate_mission_rotator
     restart_on_next_ball_when_started: true
     enable_on_next_ball_when_enabled: true
+  stronghold:
+    show_tokens:
+      light: l_world5
+      color: red
+    show_when_selected: show_flashcolor 
+    show_when_started: show_fadecolorfaster
+    show_when_completed: show_solidcolor 
+    events_when_started: stronghold_started
+    reset_events: reset_worlds
+    enable_events: stronghold_start
+    complete_events: stronghold_completed
+    events_when_completed: rotate_mission_rotator
+    restart_on_next_ball_when_started: true
+    enable_on_next_ball_when_enabled: true
   world6:
     show_tokens:
       light: l_world6
@@ -517,8 +531,8 @@ achievements:
 
 achievement_groups:
   worlds:
-    achievements: world1, world2, world3, world4, world5, world6
-    start_selected_events: world_start, world1_start, world2_start, world3_start, world4_start, world5_start, theend_start
+    achievements: world1, world2, world3, world4, world5, stronghold, world6
+    start_selected_events: world_start, world1_start, world2_start, world3_start, world4_start, stronghold_start, world5_start, theend_start
     events_when_enabled: mission_rotator_ready
     auto_select: true
     enable_while_no_achievement_started: true
@@ -624,6 +638,18 @@ widgets:
       z: 100
       anchor_x: left
       anchor_y: top
+    - type: text        #WORLD JACKPOT
+      text: Stronghold Progress - (player|stronghold_progress)
+      number_grouping: true
+      min_digits: 2
+      font_name: ARLRDBD
+      font_size: 18
+      y: top-200
+      x: left+50
+      z: 100
+      anchor_x: left
+      anchor_y: top
+      
 
   widget_scorebackground:
     - type: image        #SCORE BACKGROUND
@@ -781,13 +807,7 @@ widgets:
     - type: image        #WORLD BACKGROUND
       image: world1_background
       z: 5
-  widget_videobackground:
-    - type: video
-      video: world1_overview
-      auto_play: true
-      volume: 0
-      end_behavior: loop
-      z: 6
+
 
 
 
