--- a/modes/world1/config/world1.yaml
+++ b/modes/world1/config/world1.yaml
@@ -2,7 +2,7 @@
 mode:
     start_events: world1_started
     stop_events: world1_completed
-    priority: 500
+    priority: 300
 
 show_player:
   mode_world1_started:  #Setup GI Light Show
@@ -91,16 +91,16 @@ variable_player:
 
 widget_player:
   mode_world1_started:
-    widget_videobackground:
-      action: add
+    widget_screenbackground:
+      action: update
       slide: world_slide
       widget_settings:
-        video: world1_overview
-    # widget_screenbackground:
+        image: world1_background
+    # widget_videobackground:
     #   action: update
     #   slide: world_slide
     #   widget_settings:
-    #     image: world1_background
+    #     video: world1_overview
     widget_item1icon:
       action: update
       slide: world_slide
