--- a/modes/world4/config/world4.yaml
+++ b/modes/world4/config/world4.yaml
@@ -2,7 +2,7 @@
 mode:
     start_events: world4_started
     stop_events: world4_completed
-    priority: 500
+    priority: 300
 
 show_player:
   mode_world4_started:  #Setup GI Light Show
@@ -96,6 +96,11 @@ widget_player:
       slide: world_slide
       widget_settings:
         image: world4_background
+  #   widget_videobackground:
+  #     action: add
+  #     slide: world_slide
+  #     widget_settings:
+  #       video: world4_overview
     widget_item1icon:
       action: update
       slide: world_slide
