--- a/modes/worldcontroller/config/worldcontroller.yaml
+++ b/modes/worldcontroller/config/worldcontroller.yaml
@@ -2,7 +2,7 @@
 mode:
     start_events:  mode_world1_starting, mode_world2_starting, mode_world3_starting, mode_world4_starting, mode_world5_starting
     stop_events:  mode_world1_stopped, mode_world2_stopped, mode_world3_stopped, mode_world4_stopped, mode_world5_stopped
-    priority: 550
+    priority: 200
 
 shot_profiles:
   collectshot:
@@ -187,6 +187,14 @@ widgets:
       x: left + 1171
       z: 100
 
+  # widget_videobackground:
+  #   - type: video
+  #     video: world1_overview
+  #     auto_play: true
+  #     volume: 0
+  #     end_behavior: loop
+  #     z: 6
+
 
 
 slides:
@@ -214,6 +222,7 @@ widget_player:
       slide: world_slide
     widget_item4needed:
       slide: world_slide
+
 
 event_player:
   mode_base_started:
