--- a/modes/base/config/base.yaml
+++ b/modes/base/config/base.yaml
@@ -40,6 +40,7 @@ event_player:
     recalculate_worldjackpot
     show_ball_count
     show_player_score
+    show_debug
   
   collectitem1_hit:
     item_collected
@@ -106,8 +107,8 @@ event_player:
   #=========== CONTROLS WHEN WORLDS ARE STARTED ============
   #START WORLD 1
   mode_base_started{current_player.world_id==0}:
-    #world1_start
-    world5_start
+    world1_start
+    #world5_start
 
   #ENABLE NEXT WORLDS WHEN NIGHT MODE RETURNS
   multiball_nightmb_ended:
@@ -627,7 +628,7 @@ widgets:
       z: 100
       anchor_x: left
       anchor_y: top
-    - type: text        #WORLD JACKPOT
+    - type: text        #EARNED EB COUNT
       text: Earned EB Count - (player|earned_ebcount)
       number_grouping: true
       min_digits: 2
@@ -638,13 +639,24 @@ widgets:
       z: 100
       anchor_x: left
       anchor_y: top
-    - type: text        #WORLD JACKPOT
+    - type: text        #STRONGHOLD PROGRESS
       text: Stronghold Progress - (player|stronghold_progress)
       number_grouping: true
       min_digits: 2
       font_name: ARLRDBD
       font_size: 18
       y: top-200
+      x: left+50
+      z: 100
+      anchor_x: left
+      anchor_y: top
+    - type: text        #STRONGHOLD PROGRESS
+      text: Multiball Multiplier - (player|multiplier_mb)
+      number_grouping: true
+      min_digits: 2
+      font_name: ARLRDBD
+      font_size: 18
+      y: top-225
       x: left+50
       z: 100
       anchor_x: left
