--- a/modes/extraball/config/extraball.yaml
+++ b/modes/extraball/config/extraball.yaml
@@ -1,7 +1,7 @@
 #config_version=5
 mode:
-    start_events: mode_worldcontroller_starting, multiball_nightmb_ended, mode_stronghold_ended
-    stop_events: mode_worldcontroller_ended, multiball_nightmb_started, mode_stronghold_started
+    start_events: mode_worldcontroller_started
+    stop_events: mode_worldcontroller_stopped
     priority: 500
 
 shot_profiles:
